<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MakeAppointment.SearchDoctors"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/myToolbarAppointments"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_scrollFlags="scroll"
                app:titleTextColor="@color/background" />

        </com.google.android.material.appbar.AppBarLayout>


            <FrameLayout
                android:id="@+id/appointmentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"/>

    <FrameLayout
        android:id="@+id/appointmentControlsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"/>

    </LinearLayout>